--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,9 +2,51 @@
   height: 100vh;
   width: 100vw;
 }
+#page-title {
+  height: 10%;
+  text-align: center;
+  width: 100%;
+  font-size: 6vh;
+  padding-top: 1vh;
+  margin: 0;
+}
 
 .search-area {
   position: absolute;
-  top: 0;
+  top: 10%;
   display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 10%;
+}
+
+#searchInput {
+  width: 50%;
+  margin: auto;
+}
+
+.counters {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  justify-content: center;
+}
+
+.ticket-list {
+  position: absolute;
+  top: 20%;
+  display: flex;
+  flex-direction: column;
+  height: 70%;
+  overflow-y: scroll;
+}
+
+#footer {
+  position: absolute;
+  bottom: 0;
+  height: 10%;
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  font-size: 4vh;
 }
