--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,4 @@
+/* ---------------------------------------APP--------------------------------------------------- */
 .App {
   height: 100vh;
   width: 100vw;
@@ -34,11 +35,16 @@
 
 .ticket-list {
   position: absolute;
+  padding: 0;
   top: 20%;
+  left: 0;
   display: flex;
   flex-direction: column;
   height: 70%;
+  width: 70%;
   overflow-y: scroll;
+  overflow-x: hidden;
+  list-style: none;
 }
 
 #footer {
@@ -49,4 +55,79 @@
   display: flex;
   justify-content: space-around;
   font-size: 4vh;
+}
+
+/* ---------------------------------------TICKET--------------------------------------------------- */
+
+.ticket {
+  border: 1px solid grey;
+  border-radius: 1.25%;
+  margin: 1%;
+  min-height: 30%;
+  max-height: 30%;
+  /* display: flex;
+  flex-direction: column; */
+}
+
+.ticket-title {
+  display: inline-block;
+  height: 20%;
+  width: 80%;
+  text-align: center;
+  top: 0;
+  margin: 0;
+}
+
+.ticket-content {
+  height: 60%;
+  width: 100%;
+  text-align: left;
+  top: 20%;
+  overflow-y: scroll;
+}
+
+.hideTicketButton {
+  display: inline-block;
+  width: 5%;
+  height: 10%;
+  top: 1%;
+  left: 1%;
+  height: 20%;
+  background-color: lightgreen;
+  border-radius: 12.5%;
+  border: none;
+  font-size: 100%;
+  text-align: center;
+}
+
+.ticket-metadata {
+  position: relative;
+  height: 20%;
+  bottom: 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.creation-date {
+  display: inline;
+  margin: 0;
+  height: 10%;
+  width: 25%;
+}
+.user-Email {
+  display: inline;
+  margin: 0;
+  height: 10%;
+  width: 25%;
+}
+.labels {
+  display: inline;
+  margin: 0;
+  width: 50%;
+  display: flex;
+}
+.label {
+  margin-right: 1%;
 }
