--- a/client/src/App.css
+++ b/client/src/App.css
@@ -4,17 +4,17 @@
   width: 100vw;
 }
 #page-title {
-  height: 10%;
+  height: 5%;
   text-align: center;
   width: 100%;
-  font-size: 6vh;
+  font-size: 3vh;
   padding-top: 1vh;
   margin: 0;
 }
 
 .search-area {
   position: absolute;
-  top: 10%;
+  top: 5%;
   display: flex;
   flex-direction: column;
   width: 100%;
@@ -31,6 +31,27 @@
   flex-direction: row;
   width: 100%;
   justify-content: center;
+}
+
+.labels-filter-bar {
+  position: absolute;
+  width: 100%;
+  height: 5%;
+  top: 15%;
+  display: flex;
+}
+
+.filtered-labels {
+  width: 50%;
+  overflow-x: scroll;
+}
+
+.option-labels {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  width: 50%;
+  overflow-x: scroll;
 }
 
 .ticket-list {
