--- a/client/src/App.css
+++ b/client/src/App.css
@@ -93,6 +93,17 @@
   list-style: none;
 }
 
+#side-menu {
+  position: absolute;
+  padding: 0;
+  top: 20%;
+  right: 0;
+  display: flex;
+  flex-direction: column;
+  height: 80%;
+  width: 30%;
+}
+
 #footer {
   position: absolute;
   bottom: 0;
