--- a/client/src/App.css
+++ b/client/src/App.css
@@ -133,6 +133,20 @@
   width: 3vh;
 }
 
+#loader {
+  position: fixed;
+  bottom: 0;
+  height: 3%;
+  width: 70%;
+  text-align: center;
+}
+.success {
+  background-color: greenyellow;
+}
+.error {
+  background-color: tomato;
+}
+
 /* ---------------------------------------TICKET--------------------------------------------------- */
 
 .ticket {
