--- a/client/src/App.css
+++ b/client/src/App.css
@@ -92,7 +92,7 @@
   top: 20%;
   left: 0;
   display: flex;
-  flex-direction: column;
+  flex-direction: column-reverse;
   height: 80%;
   width: 70%;
   overflow-y: scroll;
@@ -165,6 +165,9 @@
   /* max-height: 30%; */
   /* display: flex;
   flex-direction: column; */
+}
+.new {
+  background-color: yellowgreen;
 }
 
 .ticket-title {
