--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,7 +1,20 @@
 /* ---------------------------------------APP--------------------------------------------------- */
 * {
-  font-size: 2vh;
+  font-family: "Lora", serif;
 }
+body {
+  font-size: 1rem;
+  background-color: #ffdead;
+  font-family: "Lora", serif;
+}
+input {
+  background-color: #f4a460;
+}
+button {
+  background-color: #bc8f8f;
+  font-size: 1rem;
+}
+
 .App {
   height: 100vh;
   width: 100vw;
@@ -21,7 +34,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  height: 10%;
+  height: 9%;
 }
 
 #searchInput {
@@ -43,6 +56,7 @@
   top: 15%;
   display: flex;
   line-height: 250%;
+  border-bottom: 1% solid #8b4513;
 }
 
 .filtered-labels {
@@ -65,11 +79,10 @@
   flex-direction: row;
   flex-wrap: nowrap;
   width: 35%;
-  height: 50%;
+  height: 100%;
   overflow-x: scroll;
   overflow-y: hidden;
   right: 0;
-  top: 25%;
 }
 .option-labels::-webkit-scrollbar {
   display: none;
@@ -97,6 +110,7 @@
   width: 70%;
   overflow-y: scroll;
   overflow-x: hidden;
+  background-color: #cd853f;
 }
 .ticket-list::-webkit-scrollbar {
   display: none;
@@ -112,6 +126,10 @@
   height: 80%;
   width: 30%;
 }
+#side-menu-title {
+  text-align: center;
+  margin: 0;
+}
 
 #add-new-form {
   display: flex;
@@ -124,9 +142,10 @@
   height: 5vh;
   border-radius: 3%;
   margin: 1%;
+  background-color: #d2691e;
 }
 .picked-menu-button {
-  filter: brightness(50%);
+  filter: brightness(80%);
 }
 
 #footer {
@@ -160,16 +179,19 @@
 
 #loader {
   position: fixed;
+  left: 0;
   bottom: 0;
   height: 3%;
   width: 70%;
   text-align: center;
 }
 .success {
-  background-color: greenyellow;
+  background-color: #808000;
+  color: lightgreen;
 }
 .error {
-  background-color: tomato;
+  background-color: #a52a2a;
+  color: lightpink;
 }
 
 /* ---------------------------------------TICKET--------------------------------------------------- */
@@ -180,7 +202,7 @@
   border-radius: 1.25%;
   margin: 1%;
   min-height: 30%;
-  /* max-height: 30%; */
+  background-color: #f5deb3;
 }
 .new {
   background-color: yellowgreen;
@@ -196,10 +218,10 @@
   height: 40%;
   max-height: 20%;
   z-index: 4;
-  width: 90%;
+  width: 80%;
   text-align: center;
   top: 0;
-  left: 5%;
+  left: 10%;
   margin: 0;
 }
 .expanded .ticket-title {
@@ -213,10 +235,13 @@
   text-align: left;
   top: 40%;
   overflow-y: hidden;
+  border: 1px solid chocolate;
+  background-color: #deb887;
+  margin: 0;
 }
 .expanded .ticket-content {
   overflow-y: scroll;
-  height: 75%;
+  height: 70%;
   top: 20%;
   /* flex-grow: 3; */
 }
@@ -226,7 +251,7 @@
 
 .hideTicketButton {
   position: absolute;
-  width: 3%;
+  width: 2vh;
   top: 0;
   left: 1%;
   border-radius: 12.5%;
@@ -237,7 +262,7 @@
 }
 .star-button {
   position: absolute;
-  width: 3%;
+  width: 2vh;
   top: 0;
   right: 6%;
   border-radius: 12.5%;
@@ -248,18 +273,20 @@
 }
 .expand-button {
   position: absolute;
-  bottom: 0;
+  bottom: -0.5rem;
   right: 48%;
+  font-size: 0.5rem;
   border-radius: 100%;
   border: none;
   text-align: center;
   z-index: 5;
   cursor: pointer;
+  background-color: #cd853f;
 }
 
 .markAsDone {
   position: absolute;
-  width: 3%;
+  width: 2vh;
   top: 0;
   right: 1%;
   border-radius: 12.5%;
@@ -269,50 +296,50 @@
   cursor: pointer;
 }
 .done {
-  background-color: greenyellow;
+  background-color: #808000;
   fill: green;
 }
 
 .ticket-metadata {
   position: absolute;
-  height: 10%;
+  height: 20%;
   bottom: 0;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  font-size: 1vh;
   width: 100%;
 }
 .expanded .ticket-metadata {
-  height: 5%;
+  height: 10%;
 }
 
 .creation-date {
   display: inline;
   margin: 0;
   height: 10%;
-  width: 30%;
-  font-size: 1vh;
+  width: 25%;
+  font-size: 75%;
 }
 .user-Email {
   display: inline;
   margin: 0;
   height: 10%;
-  width: 30%;
-  font-size: 1vh;
+  width: 25%;
+  font-size: 75%;
 }
 .labels {
+  height: 100%;
   display: inline;
   margin: 0;
   width: 40%;
   display: flex;
-  overflow-y: hidden;
+  overflow-y: scroll;
   overflow-x: scroll;
 }
 .labels::-webkit-scrollbar {
   display: none;
 }
 .label {
+  height: 100%;
   margin-right: 1%;
-  font-size: 1vh;
 }
