--- a/client/src/App.css
+++ b/client/src/App.css
@@ -253,8 +253,8 @@ button {
 }
 
 .expanded {
-  min-height: 80%;
-  flex-grow: 3;
+  min-height: 95%;
+  z-index: 20;
 }
 
 .ticket-title {
@@ -269,7 +269,7 @@ button {
   margin: 0;
 }
 .expanded .ticket-title {
-  height: 15%;
+  height: 10%;
 }
 
 .ticket-content {
@@ -285,9 +285,8 @@ button {
 }
 .expanded .ticket-content {
   overflow-y: scroll;
-  height: 60%;
+  height: 55%;
   top: 15%;
-  /* flex-grow: 3; */
 }
 .ticket-content::-webkit-scrollbar {
   display: none;
@@ -354,7 +353,7 @@ button {
   width: 100%;
 }
 .expanded .ticket-metadata {
-  height: 7%;
+  height: 6%;
 }
 
 .creation-date {
@@ -395,23 +394,29 @@ button {
 .comment-bar {
   position: absolute;
   width: 100%;
-  bottom: 7%;
-  height: 18%;
+  bottom: 6%;
+  height: 24%;
 }
 
 .new-comment-form {
   position: absolute;
   width: 100%;
-  height: 30%;
+  height: 20%;
   bottom: 0;
 }
-
+.comments-counter {
+  width: 100%;
+  position: absolute;
+  top: 0;
+  text-align: center;
+}
 .comments {
   position: absolute;
   list-style: none;
   padding: 0;
   width: 100%;
-  height: 70%;
+  height: 60%;
+  bottom: 5%;
   overflow-y: scroll;
 }
 .comments::-webkit-scrollbar {
@@ -422,6 +427,11 @@ button {
   width: 85%;
   margin-left: 5%;
   border: 1px solid rgba(165, 42, 42, 0.363);
+  border-radius: 5px;
+  padding: 0.5%;
+  margin-bottom: 2px;
+  overflow-wrap: break-word;
+  background-color: #d1b68c;
 }
 
 .new-comment-text {
