--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,21 +1,22 @@
 /* ---------------------------------------APP--------------------------------------------------- */
 * {
   font-family: "Lora", serif;
+  color: #10181f;
 }
 body {
   font-size: 1rem;
-  background-color: #ffdead;
+  background-color: #dde7f0;
   font-family: "Lora", serif;
 }
 input {
-  background-color: #deb887;
-  border: 1px solid #ffdead;
+  background-color: whitesmoke;
+  border: 1px solid #1a4e6d;
   border-radius: 3px;
 }
 button {
-  background-color: #bc8f8f;
+  background-color: #76a1c5;
   font-size: 1rem;
-  border: 1px solid #bc8f8f9f;
+  border: 1px solid #486883;
 }
 
 .App {
@@ -59,7 +60,6 @@ button {
   top: 15%;
   display: flex;
   line-height: 250%;
-  border-bottom: 1% solid #8b4513;
 }
 
 .filtered-labels {
@@ -113,7 +113,7 @@ button {
   width: 100%;
   overflow-y: scroll;
   overflow-x: hidden;
-  background-color: #cd853f;
+  background-color: #334758;
 }
 .ticket-list::-webkit-scrollbar {
   display: none;
@@ -149,7 +149,7 @@ button {
   height: 10vh;
   width: 10vh;
   border-radius: 100%;
-  background-color: #d2691e;
+  background-color: #368bde;
 }
 #hide-form-img {
   height: 80%;
@@ -158,17 +158,11 @@ button {
   margin: auto;
 }
 
-/* #add-new-form {
-  display: flex;
-  flex-direction: column;
-  height: max-content;
-  text-align: center;
-  font-size: large;
-} */
 .menu-button {
   width: 20%;
   font-size: small;
-  background-color: #d2691e;
+  background-color: #4b6e86;
+
   border: none;
 }
 .picked-menu-button {
@@ -181,6 +175,7 @@ button {
   height: 5%;
   width: 100%;
   right: 0;
+  background-color: #5b6f81;
 }
 
 #contact-title {
@@ -188,38 +183,49 @@ button {
   left: 0;
   width: 50%;
   text-align: left;
+  color: whitesmoke;
+  line-height: 200%;
+  margin-left: 1%;
 }
 
 #contact-links {
   width: 50%;
+  height: 100%;
   right: 0;
   position: absolute;
-  bottom: 2%;
+  bottom: 0;
   display: flex;
   justify-content: space-around;
 }
 
 .contact-logo {
-  height: 3vh;
+  height: 60%;
   width: 3vh;
+  margin-top: 30%;
+  background-color: #bbcfe2;
+  border-radius: 3px;
 }
 
 #loader {
   position: fixed;
   left: 0;
-  bottom: 5%;
-  height: 3%;
+  bottom: 0%;
+  min-height: 5%;
+  height: auto;
+  font-size: large;
   width: 100%;
   text-align: center;
   z-index: 15;
+  color: #dde7f0;
 }
 .success {
-  background-color: #808000;
-  color: lightgreen;
+  background-color: #0e76a8;
 }
 .error {
-  background-color: #a52a2a;
-  color: lightpink;
+  background-color: #7e6546;
+}
+.pending {
+  background-color: #4a6881;
 }
 
 #new-ticket-form {
@@ -229,10 +235,25 @@ button {
   height: 70%;
   top: 25%;
   flex-direction: column;
-  background-color: #f5deb3;
+  background-color: #dde7f0;
   z-index: 10;
+  text-align: center;
+  align-items: center;
 }
-
+.newTicketInput {
+  height: 5%;
+  border-radius: 10px;
+  width: 90%;
+  padding: 1%;
+  margin: 1%;
+  text-align: center;
+}
+#submit {
+  margin: auto;
+  height: 10%;
+  width: 30%;
+  border-radius: 20px;
+}
 #hide-form-button {
   position: fixed;
   bottom: 0;
@@ -242,19 +263,21 @@ button {
 
 .ticket {
   position: relative;
-  border: 1px solid grey;
-  border-radius: 1.25%;
+  border: 1px solid #5b5b5b;
+  border-radius: 10px;
   margin: 1%;
+  padding: 1%;
   min-height: 30%;
-  background-color: #f5deb3;
+  background-color: #dde7f0;
+  transition: 300ms;
 }
 .new {
   background-color: yellowgreen;
 }
 
 .expanded {
-  min-height: 95%;
   z-index: 20;
+  min-height: 90%;
 }
 
 .ticket-title {
@@ -270,19 +293,23 @@ button {
 }
 .expanded .ticket-title {
   height: 10%;
+  transition: 300ms;
 }
 
 .ticket-content {
   position: absolute;
-  height: 40%;
-  width: 100%;
+  height: 35%;
+  width: 98%;
+  border-radius: 5px;
   text-align: left;
   top: 40%;
   overflow-y: hidden;
-  border: 1px solid chocolate;
-  background-color: #deb887;
+  border: 1px solid #5b5b5b;
+  background-color: #bbcfe2;
   margin: 0;
+  transition: 300ms;
 }
+
 .expanded .ticket-content {
   overflow-y: scroll;
   height: 55%;
@@ -295,7 +322,7 @@ button {
 .hideTicketButton {
   position: absolute;
   width: 2vh;
-  top: 0;
+  top: 1vw;
   left: 1%;
   border-radius: 12.5%;
   border: none;
@@ -306,7 +333,7 @@ button {
 .star-button {
   position: absolute;
   width: 2vh;
-  top: 0;
+  top: 1vw;
   right: 6%;
   border-radius: 12.5%;
   border: none;
@@ -318,19 +345,20 @@ button {
   position: absolute;
   bottom: -0.5rem;
   right: 48%;
-  font-size: 0.5rem;
+  font-size: 0.7rem;
   border-radius: 100%;
   border: none;
   text-align: center;
   z-index: 5;
   cursor: pointer;
-  background-color: #cd853f;
+  background-color: #193b51;
+  color: #bbcfe2;
 }
 
 .markAsDone {
   position: absolute;
   width: 2vh;
-  top: 0;
+  top: 1vw;
   right: 1%;
   border-radius: 12.5%;
   border: none;
@@ -339,8 +367,8 @@ button {
   cursor: pointer;
 }
 .done {
-  background-color: #808000;
-  fill: green;
+  background-color: #368bbe;
+  color: #dde7f0;
 }
 
 .ticket-metadata {
@@ -401,7 +429,7 @@ button {
 .new-comment-form {
   position: absolute;
   width: 100%;
-  height: 20%;
+  height: 22%;
   bottom: 0;
 }
 .comments-counter {
@@ -426,17 +454,20 @@ button {
 .comment {
   width: 85%;
   margin-left: 5%;
-  border: 1px solid rgba(165, 42, 42, 0.363);
+  border: 1px solid #0e76a8;
   border-radius: 5px;
   padding: 0.5%;
   margin-bottom: 2px;
   overflow-wrap: break-word;
-  background-color: #d1b68c;
+  background-color: #c6d4e0;
 }
 
 .new-comment-text {
-  width: 80%;
+  width: 75%;
   margin-left: 5%;
+  margin-right: 5%;
+  border-radius: 10px;
+  margin-bottom: 5%;
 }
 
 .new-comment-button {
