--- a/client/src/App.css
+++ b/client/src/App.css
@@ -17,6 +17,7 @@ button {
   background-color: #76a1c5;
   font-size: 1rem;
   border: 1px solid #486883;
+  outline: none;
 }
 
 .App {
@@ -64,7 +65,7 @@ button {
 
 .filtered-labels {
   position: absolute;
-  width: 40%;
+  width: 38%;
   height: 100%;
   display: flex;
   flex-direction: row;
@@ -72,23 +73,44 @@ button {
   overflow-x: scroll;
   overflow-y: hidden;
   right: 50%;
+  border-radius: 5px;
 }
-.filtered-labels::-webkit-scrollbar {
-  display: none;
-}
+
 .option-labels {
   position: absolute;
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
-  width: 35%;
-  height: 100%;
+  width: 33%;
+  height: 90%;
+  padding-top: 0.1%;
   overflow-x: scroll;
   overflow-y: hidden;
-  right: 0;
+  right: 1%;
+  border-radius: 5px;
+  /* border: 1px solid #1a4e6d; */
 }
-.option-labels::-webkit-scrollbar {
-  display: none;
+/* width */
+::-webkit-scrollbar {
+  height: 0.5vh;
+  width: 1vh;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  border-radius: 10px;
+  background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background: #888;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
 }
 
 #labels-title {
@@ -114,9 +136,6 @@ button {
   overflow-y: scroll;
   overflow-x: hidden;
   background-color: #334758;
-}
-.ticket-list::-webkit-scrollbar {
-  display: none;
 }
 
 #nav-bar {
@@ -162,11 +181,17 @@ button {
   width: 20%;
   font-size: small;
   background-color: #4b6e86;
-
   border: none;
 }
+
+.menu-button:hover {
+  filter: brightness(90%);
+}
+
 .picked-menu-button {
   filter: brightness(80%);
+  color: whitesmoke;
+  font-size: 1.1rem;
 }
 
 #footer {
@@ -230,9 +255,9 @@ button {
 
 #new-ticket-form {
   position: fixed;
-  padding-top: 5vh;
+  padding-top: 3vh;
   width: 100%;
-  height: 70%;
+  height: 67%;
   top: 25%;
   flex-direction: column;
   background-color: #dde7f0;
@@ -256,8 +281,13 @@ button {
 }
 #hide-form-button {
   position: fixed;
-  bottom: 0;
   z-index: 15;
+  height: 7vh;
+  width: 7vh;
+  right: 3%;
+  top: 87%;
+  border-radius: 20px;
+  background-color: #368bde;
 }
 /* ---------------------------------------TICKET--------------------------------------------------- */
 
@@ -308,15 +338,14 @@ button {
   background-color: #bbcfe2;
   margin: 0;
   transition: 300ms;
+  word-wrap: break-word;
 }
 
 .expanded .ticket-content {
   overflow-y: scroll;
+  overflow-x: hidden;
   height: 55%;
   top: 15%;
-}
-.ticket-content::-webkit-scrollbar {
-  display: none;
 }
 
 .hideTicketButton {
@@ -401,15 +430,13 @@ button {
 .labels {
   height: 100%;
   display: inline;
-  margin: 0;
-  width: 40%;
+  margin-right: 5%;
+  width: 30%;
   display: flex;
-  overflow-y: scroll;
+  overflow-y: hidden;
   overflow-x: scroll;
 }
-.labels::-webkit-scrollbar {
-  display: none;
-}
+
 .label {
   height: 90%;
   margin-right: 3%;
@@ -421,16 +448,19 @@ button {
 
 .comment-bar {
   position: absolute;
-  width: 100%;
-  bottom: 6%;
-  height: 24%;
+  border: 1px solid black;
+  border-radius: 10px;
+  background-color: #bbcfe2;
+  width: 98%;
+  bottom: 7%;
+  height: 21%;
 }
 
 .new-comment-form {
   position: absolute;
   width: 100%;
-  height: 22%;
-  bottom: 0;
+  height: 20%;
+  bottom: 7%;
 }
 .comments-counter {
   width: 100%;
@@ -443,12 +473,9 @@ button {
   list-style: none;
   padding: 0;
   width: 100%;
-  height: 60%;
-  bottom: 5%;
+  height: 50%;
+  bottom: 7%;
   overflow-y: scroll;
-}
-.comments::-webkit-scrollbar {
-  display: none;
 }
 
 .comment {
