--- a/client/src/App.css
+++ b/client/src/App.css
@@ -302,7 +302,7 @@ button {
   transition: 300ms;
 }
 .new {
-  background-color: yellowgreen;
+  background-color: rgba(63, 151, 186);
 }
 
 .expanded {
